# basecamp-chatbot

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
src/basecamp_chatbot/: chatbot.py  exceptions.py  post_file.py  post_string.py  rest_adapter.py
