[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "basecamp_chatbot"
version = "2024.8.22.4"
authors = [
    { name="Nicholas Vanhaute", email="nvanhaute@wisc.edu" },
]
description = "A Python library for the Basecamp 3 chatbot API"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "certifi>=2024.7.4",
    "charset-normalizer>=3.3.2",
    "docopt-ng>=0.9.0",
    "idna>=3.7",
    "requests==2.32.3",
    "urllib3==2.2.2",
]

[project.urls]
Homepage = "https://github.com/uwmadison-chm/basecamp-chatbot"
Issues = "https://github.com/uwmadison-chm/basecamp-chatbot/issues"

[project.scripts]
bc_post_from_str = "basecamp_chatbot.post_string:_main"
bc_post_from_file = "basecamp_chatbot.post_file:_main"